--- a/notes/compmus2023-w11.html
+++ b/notes/compmus2023-w11.html
@@ -428,7 +428,7 @@ Self-Study Material: Deltas and Delta-Deltas for Playlists</a></li>
 <pre><code>## ── Attaching core tidyverse packages ──────────────────────── tidyverse 2.0.0 ──
 ## ✔ dplyr     1.1.0     ✔ readr     2.1.4
 ## ✔ forcats   1.0.0     ✔ stringr   1.5.0
-## ✔ ggplot2   3.4.1     ✔ tibble    3.1.8
+## ✔ ggplot2   3.4.1     ✔ tibble    3.2.0
 ## ✔ lubridate 1.9.2     ✔ tidyr     1.3.0
 ## ✔ purrr     1.0.1     
 ## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
@@ -592,13 +592,10 @@ Aitchison’s clr transformation can help with chroma.</p>
   bind_rows(
     pop |&gt; mutate(playlist = &quot;Indie Pop&quot;),
     party |&gt; mutate(playlist = &quot;Indie Party&quot;),
-    workout |&gt; mutate(playlist = &quot;Indie Workout&quot;)
+    workout |&gt; mutate(playlist = &quot;Indie Running&quot;)
   ) |&gt;
   mutate(playlist = factor(playlist)) |&gt;
-  mutate(
-    segments =
-      map2(segments, key, compmus_c_transpose)
-  ) |&gt;
+  mutate(segments = map2(segments, key, compmus_c_transpose)) |&gt;
   mutate(
     pitches =
       map(segments,
@@ -631,10 +628,7 @@ find any patterns in the data?</p>
     workout |&gt; mutate(playlist = &quot;Indie Workout&quot;)
   ) |&gt;
   mutate(playlist = factor(playlist)) |&gt;
-  mutate(
-    segments =
-      map2(segments, key, compmus_c_transpose)
-  ) |&gt;
+  mutate(segments = map2(segments, key, compmus_c_transpose)) |&gt;
   mutate(
     segments =
       map(
@@ -686,16 +680,16 @@ indie_deltas</code></pre>
 <pre><code>## # A tibble: 60 × 101
 ##    playlist…¹ playl…² playl…³ playl…⁴ playl…⁵ dance…⁶ energy   key loudn…⁷  mode
 ##    &lt;chr&gt;      &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;   &lt;chr&gt;     &lt;dbl&gt;  &lt;dbl&gt; &lt;int&gt;   &lt;dbl&gt; &lt;int&gt;
-##  1 37i9dQZF1… Indie … https:… Spotify spotify   0.516  0.322     9  -11.8      1
+##  1 37i9dQZF1… Indie … https:… Spotify spotify   0.595  0.891     0   -3.93     1
 ##  2 37i9dQZF1… Indie … https:… Spotify spotify   0.601  0.37     10  -10.5      1
-##  3 37i9dQZF1… Indie … https:… Spotify spotify   0.656  0.838     5   -8.41     1
+##  3 37i9dQZF1… Indie … https:… Spotify spotify   0.747  0.655     6   -6.90     1
 ##  4 37i9dQZF1… Indie … https:… Spotify spotify   0.687  0.768     9   -5.90     1
-##  5 37i9dQZF1… Indie … https:… Spotify spotify   0.663  0.319     9  -13.5      1
+##  5 37i9dQZF1… Indie … https:… Spotify spotify   0.516  0.322     9  -11.8      1
 ##  6 37i9dQZF1… Indie … https:… Spotify spotify   0.533  0.74      2   -5.77     1
 ##  7 37i9dQZF1… Indie … https:… Spotify spotify   0.806  0.507    11   -6.43     1
 ##  8 37i9dQZF1… Indie … https:… Spotify spotify   0.548  0.456     9   -5.98     1
-##  9 37i9dQZF1… Indie … https:… Spotify spotify   0.329  0.444     1   -9.97     1
-## 10 37i9dQZF1… Indie … https:… Spotify spotify   0.492  0.807    10   -3.68     0
+##  9 37i9dQZF1… Indie … https:… Spotify spotify   0.656  0.838     5   -8.41     1
+## 10 37i9dQZF1… Indie … https:… Spotify spotify   0.392  0.541     1   -8.68     1
 ## # … with 50 more rows, 91 more variables: speechiness &lt;dbl&gt;,
 ## #   acousticness &lt;dbl&gt;, instrumentalness &lt;dbl&gt;, liveness &lt;dbl&gt;, valence &lt;dbl&gt;,
 ## #   tempo &lt;dbl&gt;, track.id &lt;chr&gt;, analysis_url &lt;chr&gt;, time_signature &lt;int&gt;,
